Added deploy.sh and a bunch of other improvements
Thanks sergio for reminding me I actually know how to do programming and making me happy about not needing Netlify or a Github account (at least for now). Also, Updated Readme.md and redid the github tree as somehow it broke stuff

--- a/config.yaml
+++ b/config.yaml
@@ -34,10 +34,10 @@ params:
   background: "/images/site/background.png"
   
   # GitHub repo URL of your site
-  gitRepo: https://codeberg.org/FlyingFlamingo/pages
+  gitRepo: https://codeberg.org/FlyingFlamingo/pablomarcos.me
 
   # specify whether you want to write some blog posts or not
-  enableBlogPost: true
+  enableBlogPost: false
 
   # specify whether you want to show Table of Contents in reading page
   enableTOC: true
