--- a/data/en/sections/skills.yaml
+++ b/data/en/sections/skills.yaml
@@ -36,5 +36,5 @@ skills:
   
 - name: Français
   icon: "/images/sections/France.png"
-  summary: "Level: B2 | Reading: C2 | Listening: C1 | Grammar: B1 | Vocabulary: C1, as certified per the EU's OLS"
+  summary: "Level: B2 | Reading: C2 | Listening: C1 | Grammar: B1 | Vocabulary: C1, as certified per the Université Grenoble Alpes"
   url: "files/French B2.pdf"
