--- a/data/es/sections/skills.yaml
+++ b/data/es/sections/skills.yaml
@@ -36,5 +36,5 @@ skills:
   
 - name: Français
   icon: "/images/sections/France.png"
-  summary: "Level: B2 | Reading: C2 | Listening: C1 | Grammar: B1 | Vocabulary: C1, de acuerdo al sistema OLS de la UE"
+  summary: "Level: B2 | Reading: C2 | Listening: C1 | Grammar: B1 | Vocabulary: C1, de acuerdo a la Université Grenoble Alpes"
   url: "files/French B2.pdf"
