--- a/data/fr/sections/skills.yaml
+++ b/data/fr/sections/skills.yaml
@@ -36,5 +36,5 @@ skills:
   
 - name: Français
   icon: "/images/sections/France.png"
-  summary: "Niveau : B2 | Lecture : C2 | Écoute : C1 | Grammaire : B1 | Vocabulaire : C1, selon le système OLS du UE"
+  summary: "Niveau : B2 | Lecture : C2 | Écoute : C1 | Grammaire : B1 | Vocabulaire : C1, selon l'Université Grenoble Alpes"
   url: "files/French B2.pdf"
