--- a/data/es/sections/projects.yaml
+++ b/data/es/sections/projects.yaml
@@ -56,7 +56,7 @@ projects:
   #repo: https://github.com/hossainemruz/toha
   summary: Contribuyo a Wikipedia, el corpus del conocimiento colectivo de la Humanidad.
   url: https://es.wikipedia.org/wiki/Usuario:Marion_Moseby
-  tags: ["hobby","open source","volunteering"] 
+  tags: ["hobby","open source"] 
 
 - name: AULA
   role: Voluntario
@@ -77,7 +77,7 @@ projects:
   timeline: "Mayo 2019"
   logo: /images/sections/osm.png
   summary: Contribuyo a OSM, el mayor dataset global de Open Data geoespacial.
-  tags: ["volunteering", "hobby"] 
+  tags: ["open source", "hobby"] 
 
 - name: Conferencia COP25 sobre el Cambio Climático
   role: Voluntario
