--- a/data/fr/sections/skills.yaml
+++ b/data/fr/sections/skills.yaml
@@ -28,7 +28,7 @@ skills:
 - name: English
   icon: "/images/sections/UK.png"
   summary: "Niveau : C1 | Lecture : C2 | Écoute : C1 | Grammaire : B1 | Vocabulaire : C1, selon Cambridge English"
-  url: "files/CAE.pdf"
+  url: "/files/CAE.pdf"
   
 - name: Español
   icon: "/images/sections/Spain.png"
@@ -37,4 +37,4 @@ skills:
 - name: Français
   icon: "/images/sections/France.png"
   summary: "Niveau : B2 | Lecture : C2 | Écoute : C1 | Grammaire : B1 | Vocabulaire : C1, selon l'Université Grenoble Alpes"
-  url: "files/French B2.pdf"
+  url: "/files/French B2.pdf"
