--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseURL: https://flyingflamingo.codeberg.page
+baseURL: https://www.pablomarcos.me
 
 languageCode: en-us
 title: "Pablo Marcos' Blog"
