--- a/config.yaml
+++ b/config.yaml
@@ -20,6 +20,9 @@ languages:
 
 # Control TOC depth
 markup:
+  goldmark:
+    renderer:
+      unsafe: true
   tableOfContents:
     startLevel: 2
     endLevel: 6
