--- a/data/en/author.yaml
+++ b/data/en/author.yaml
@@ -8,7 +8,7 @@ image: "images/author/avataaars.png"
 
 # give your some contact information. they will be used in the footer
 contactInfo:
-  email: "contact@pablomarcos.me"
+  email: "web@pablomarcos.me"
 
 # some summary about what you do
 summary:
