--- a/data/en/sections/about.yaml
+++ b/data/en/sections/about.yaml
@@ -25,7 +25,7 @@ summary: 'I am an undergraduate in Computational Biotechnology with an special i
 socialLinks:
 - name: Email
   icon: "fas fa-envelope-open-text"
-  url: "mailto:contact@pablomarcos.me"
+  url: "mailto:web@pablomarcos.me"
 - name: PGP
   icon: "fas fa-envelope"
   url: /files/gpg.txt
