--- a/data/en/sections/projects.yaml
+++ b/data/en/sections/projects.yaml
@@ -35,7 +35,7 @@ projects:
   logo: /images/sections/kde-logo.png
   role: Programmer
   timeline: "June 2020 - September 2020"
-  url: https://okular.kde.org # If your project is a public repo on GitHub, then provide this link. it will show star count.
+  url: https://www.pablomarcos.me/posts/concursos/season-of-kde-2021/sok-final-status-report/ # If your project is a public repo on GitHub, then provide this link. it will show star count.
   #repo: ""  # If your project is not a public repo but it has a website or any external details url then provide it here. don't provide "repo" and "url" simultaneously.
   summary: I helped modernize the website for Okular, KDE's universal document reader, by using Carl's Schwan's aether-sass theme.
   tags: ["professional", "HUGO", "webdev", "html5"]
