--- a/data/en/sections/skills.yaml
+++ b/data/en/sections/skills.yaml
@@ -16,24 +16,24 @@ skills:
   summary: "I have advanced knowledge on python as an scripting language, and BioPython as a package in particular, as used for Computational Biology."
   url: "https://codeberg.org/FlyingFlamingo/BioPython-Analyzer"
 
-- name: Linux System Administration
-  logo: "/images/sections/linux.png"
-  summary: "I use GNU/Linux as my main Operating System, and I also manage a self-hosted server using a Raspberry Pi and Yunohost. Mostly debian derivatives."
+- name: Web Development
+  logo: "/images/sections/firefox.png"
+  summary: "I know how to develop beautifull, engaging and responsive websites, such as this one, using HUGO, WordPress and most commercial CMSs"
 
 - name: Godot Development
   logo: "/images/sections/godot.png"
-  summary: "Used the Godot Engine as part of Who's That Function, an interactive program intended to teach novel students the fundamental properties of functions."
+  summary: "I used the Godot Engine as part of Who's That Function, an interactive program intended to teach novel students the fundamental properties of functions."
   url: "https://codeberg.org/FlyingFlamingo/Whos-That-Function"
-  
+
 - name: English
   logo: "/images/sections/UK.png"
   summary: "Level: C1 | Reading: C2 | Listening: C1 | Grammar: B1 | Vocabulary: C1, as certified per Cambridge English"
   url: "files/CAE.pdf"
-  
+
 - name: Español
   logo: "/images/sections/Spain.png"
   summary: "I am a native speaker, as I was born in Madrid"
-  
+
 - name: Français
   logo: "/images/sections/France.png"
   summary: "Level: B2 | Reading: C2 | Listening: C1 | Grammar: B1 | Vocabulary: C1, as certified per the Université Grenoble Alpes"
