--- a/data/es/sections/education.yaml
+++ b/data/es/sections/education.yaml
@@ -10,13 +10,13 @@ section:
   # hideTitle: true
 
 degrees:
-- name: MSc in Computational Biotechnology
+- name: Máster Universitario en Biología Computacional
   icon: fa-microscope
   timeframe: 2021-2023
   institution:
     name: Universidad Politécnica de Madrid
     url: "http://www.computationalbiologymaster.cbgp.upm.es/"  
-- name: ERASMUS on Bioinfomatics and Modelisation
+- name: ERASMUS en Bioinfomática y Modelización
   icon: fa-university
   timeframe: 2020-2021
   institution:
@@ -26,7 +26,7 @@ degrees:
     scale: GPA
     achieved: 14.20
     outOf: 20
-- name: BSc in Biotechnology
+- name: Grado en Biotecnología
   icon: fa-university
   timeframe: 2017-2021
   institution:
@@ -36,7 +36,7 @@ degrees:
     scale: GPA
     achieved: 7.22
     outOf: 10
-- name: High School Diploma
+- name: Diploma en Bachillerato
   icon: fa-graduation-cap
   timeframe: 2009-2017
   institution:
