--- a/data/fr/sections/projects.yaml
+++ b/data/fr/sections/projects.yaml
@@ -3,7 +3,7 @@ section:
   name: Projets
   id: projects
   enable: true
-  weight: 4
+  weight: 5
   showOnNavbar: true
   # Can optionally hide the title in sections
   # hideTitle: true
@@ -13,16 +13,25 @@ buttons:
 - name: Tous
   filter: "all"
 - name:  Professionnel
-  filter: "professional"
+  filter: "Professionnel"
 - name: Académique
-  filter: "academic"
+  filter: "Académique"
 - name: Hobby
-  filter: "hobby"
-- name: Volontariat
-  filter: "volunteering"
+  filter: "Hobby"
+- name: Bénévolat
+  filter: "Bénévolat"
 
 # your projects
 projects:
+- name: Tacrolimus et transplantation rénale
+  logo: /images/sections/chu-grenoble.png
+  role: Investigador-Programador
+  timeline: "Marzo 2021 - Julio 2021"
+  #repo: https://github.com/tensorflow/tensorflow
+  url: "files/Memoria TFG FIRMADA.pdf"
+  summary: Ma thèse analyse l'effet des trajectoires des taux sanguins résiduels de Tacrolimus sur la survie des allogreffes rénales. [Le code peut être consulté ici](https://codeberg.org/FlyingFlamingo/destination-grenoble), et le texte sera bientôt publié en accès libre dans le dépôt de l'UPM.
+  tags: ["academic","biostadistique","biotech"]
+
 - name: Who's That Function
   logo: /images/sections/godot.png
   role:  Programmeur
@@ -32,6 +41,24 @@ projects:
   #repo: ""  # If your project is not a public repo but it has a website or any external details url then provide it here. don't provide "repo" and "url" simultaneously.
   summary: Un jeu dans le style de la série "Who's Who" qui apprend aux étudiants de première année les propriétés des traits.
   tags: ["professional", "godot engine", "GDScript"]
+
+- name: Journal "Pensée mathématique"
+  logo: /images/sections/wordpress.png
+  role: Web Developer
+  timeline: "January 2021 - March 2021"
+  url: https://revista.giepm.com/en/ # If your project is a public repo on GitHub, then provide this link. it will show star count.
+  #repo: ""  # If your project is not a public repo but it has a website or any external details url then provide it here. don't provide "repo" and "url" simultaneously.
+  summary: J'ai rénové les sites web du [Journal "PM"](https://revista.giepm.com/) et du [roupe d'Innovation Éducative "Pensée mathématique"](https://giepm.com/), en utilisant WordPress.
+  tags: ["professional", "WordPress", "webdev"]
+
+- name: Season of KDE 2021
+  logo: /images/sections/kde-logo.png
+  role: Développeur Web
+  timeline: "January 2021 - April 2021"
+  url: https://www.pablomarcos.me/posts/concursos/season-of-kde-2021/sok-final-status-report/ # If your project is a public repo on GitHub, then provide this link. it will show star count.
+  #repo: ""  # If your project is not a public repo but it has a website or any external details url then provide it here. don't provide "repo" and "url" simultaneously.
+  summary: J'ai participé à la refonte du site web d'Okular, le lecteur de documents universel de KDE, en utilisant le thème aether-sass de Carl Schwan.
+  tags: ["professional", "HUGO", "webdev", "html5"]
 
 - name: Modélisation de CoViD-19 en Python
   logo: /images/sections/coronavirus.png
@@ -43,11 +70,12 @@ projects:
   tags: ["academic", "mathematic models","biotechnology"]
   
 - name: Représentant au Conseil Départemental @ UPM
+  logo: /images/sections/ETSIAAB.png
   role: 
   timeline: "Septembre 2018 - Actualité"
   #repo: https://github.com/hossainemruz/toha
   summary:  J'ai fait partie du conseil du département de biotechnologie-biologie végétale de mon école, ETSIAAB-UPM, où j'ai eu le droit de voter et de participer au processus de prise de décision.
-  tags: ["academic"] 
+  tags: ["academic"]
 
 - name: Wikipedia
   logo: /images/sections/wikipedia.png
@@ -63,14 +91,15 @@ projects:
   timeline: "Mai 2019"
   logo: /images/sections/aula.jpg
   summary: J'ai été bénévole au Salon International de l'Etudiant AULA, où j'ai eu l'occasion d'orienter des centaines d'étudiants sur leur carrière, ainsi que de me renseigner sur l'organisation de grands événements.
-  tags: ["volunteering"] 
+  tags: ["volunteering"]
 
 - name: Reparto Solidario Universitario
   role:  Volontaire
   timeline: "2017-2020"
+  logo: /images/sections/RSU.jpg
   summary:  Depuis plus de trois ans, je suis bénévole au RSU, une activité reconnue par l'UPM où nous aidons les sans-abri en leur donnant de la nourriture et en leur permettant de discuter.
   url: https://www.instagram.com/rsu_madrid/?hl=es
-  tags: ["volunteering"] 
+  tags: ["volunteering"]
   
 - name: OpenStreetMap
   role: Contributeur
@@ -82,9 +111,10 @@ projects:
 - name: Conférence sur le changement climatique COP25
   role: Volontaire
   timeline: "2019"
+  logo: /images/sections/COP25.png
   summary: J'ai participé en tant que volontaire au Sommet du climat de Madrid 2019, où j'ai appris à connaître la durabilité et l'organisation de grands événements.
   url: "files/COP25 Certificate.pdf"
-  tags: ["volunteering"] 
+  tags: ["volunteering"]
   
 - name: BOINC
   role: Volontaire
@@ -92,4 +122,4 @@ projects:
   logo: /images/sections/boinc.jpg
   url: "/files/BOINC.pdf"
   summary: je contribue à la puissance de traitement gratuite du plus grand nombre possible de mes appareils au réseau BOINC.
-  tags: ["volunteering"] 
+  tags: ["volunteering"]
